report main body working

--- a/report/contents.tex
+++ b/report/contents.tex
@@ -5,7 +5,9 @@
 
 \renewcommand{\cfttoctitlefont}{\hfill\centering\bfseries\MakeUppercase}
 \renewcommand{\cftaftertoctitle}{\hfill\hfill}
-\setcounter{secnumdepth}{2}
+
+\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{3}
 
 \tableofcontents
 
