--- a/report/description.tex
+++ b/report/description.tex
@@ -5,40 +5,44 @@
 \subsection{Сценарии использования}
 
 \tab
-Были разработаны следующие сценарии использования решения:
+Были разработаны следующие сценарии использования:
+\input{scenarios}
+\vspace{\baselineskip}
 
-\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
-	\item \textit{Просмотр пользователем опубликованной отсортированной информации о наблюдениях} \\
-	Действующее лицо: пользователь. \\
-	Основной сценарий:
-	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
-		\item Пользователь открывает приложение клиент.
-		\item Пользователь нажимает на один из указателей на карте, ему демонстрируются подробные сведения об отчёте и комментарии к нему.
-		\item По желанию пользователь нажимает на фотографии, прикреплённые к отчёту и просматривает их увеличенную версию.
-	\end{itemize}
-	Результат: Пользователь ознакомился как с общей статистикой распространения потенциально опасных растений на карте, так и с заинтересовавшими его конкретными отчётами.
-	
-	\item \textit{Просмотр пользователем информации о системе, её задачах и краткого руководства по использованию} \\
-	Действующее лицо: пользователь. \\
-	Основной сценарий:
-	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
-		\item На основной странице приложения пользователь открывает меню навигации и выбирает пункт \textquote{\en{About}}, ему демонстрируется информация о системе, её задачах и краткое руководство по использованию.
-	\end{itemize}
-	Результат: Пользователь посмотрел данные со всей информацией по операциям конкретного изделия.
-	
-	\item \textit{Авторизация пользователя в системе} \\
-	Действующее лицо: пользователь. \\
-	Условие: На основной странице приложения пользователь открывает меню навигации и выбирает пункт \textquote{\en{Account}} ИЛИ на основной странице приложения нажимает на кнопку справа внизу с символом \textquote{+}. \\
-	Основной сценарий:
-	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
-		\item Открывается страница авторизации пользователя.
-	\end{itemize}
-	Результат: Пользователь авторизован в системе и может выполнять требующие авторизации сценарии.
+\subsection{Модель данных}
+
+\tab
+База данных была спроектирована с помощью ER-метода (метода \textquote{сущность‐связь}).
+Для этого была создана ER‐модель, показывающая как атрибуты сущностей предметной области, так и их связи.
+Атрибут или атрибуты, уникально идентифицирующие сущность, называются ключевыми, на диаграмме они подчёркнуты.
+
+\subsubsection{Описание сущностей}
+
+\tab
+В предметной области можно выделить следующие сущности:
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textquote{Пользователь} с ключом \textquote{Адрес электронной почты} и атрибутами: \textquote{Хэш сумма пароля}, \textquote{Имя}, \textquote{Дата регистрации в системе}, \textquote{Время последнего входа в систему}, \textquote{Является ли пользователь администратором}, \textquote{Является ли пользователь специалистом}, \textquote{Активен ли аккаунт пользователя}, \textquote{Фото профиля} и \textquote{Уменьшенное фото профиля}.
+	\item \textquote{Отчёт} с ключом \textquote{Номер отчёта} и атрибутами: \textquote{Дата и время наблюдения}, \textquote{Адрес}, \textquote{Первый комментарий}, \textquote{Координаты}, \textquote{Статус} и \textquote{Вид растения}.
+	\item \textquote{Комментарий} без ключа и с атрибутом: \textquote{Текст комментария}.
 \end{itemize}
 
-\subsection{Пользовательский интерфейс}
+\subsubsection{ER модель}
 
-\subsection{Модель базы данных}
+\tab
+Между сущностями можно установить следующие связи:
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textquote{Пользователь - Отчёт}: пользователь оставляет отчёт о наблюдении потенциально опасного для человека растения. Связь не обязательная, так как в случае удаления аккаунта пользователя оставленные им отчёты остаются, имеет степень 1 со стороны пользователя и n со стороны отчёта.
+	\item \textquote{Отчёт - Комментарий}: комментарий относится к какому-либо отчёту. Связь обязательная, так как комментарий не имеет смысла без отчёта, к которому он относится, имеет степень 1 со стороны отчёта и n со стороны комментария.
+	\item \textquote{Пользователь - Комментарий}: пользователь оставляет комментарий к отчёту. Связь не обязательная, так как в случае удаления аккаунта пользователя оставленные им комментарии остаются, имеет степень 1 со стороны пользователя и n со стороны комментария.
+\end{itemize}
+
+\tab
+На рисунке 2 представлена ER диаграмма модели. \\
+\picturetwo
+
+\subsubsection{Реляционная модель}
+
+
 
 \subsection{Серверная часть ПО}
 
@@ -47,6 +51,12 @@
 \subsection{Клиентская часть ПО}
 
 \subsection{Система автоматической проверки изображений}
+
+\subsection{Пользовательский интерфейс}
+
+\subsubsection{Пользовательский интерфейс клиентского приложения}
+
+\subsubsection{Пользовательский интерфейс сервисного сайта}
 
 \subsection{Процесс установки и запуска системы}
 
