--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -21,7 +21,7 @@
 
 \nwln
 \textbf{Для достижения данной цели были сформулированы следующие задачи}:
-\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
+\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
 	\item Разработка архитектуры, описание ее компонентов и путей передачи данных.
 	\item Создание сервера для сбора и хранения данных, а также системы анализа и модерирования наблюдений с web-интерфейсом.
 	\item Создание кроссплатформенного мобильного и web приложения, позволяющего добровольцем заносить наблюдения в систему.
