--- a/report/overview.tex
+++ b/report/overview.tex
@@ -28,7 +28,7 @@
 Поиск аналогов производился среди систем, которые в настоящий момент используются экологами для фиксации месторасположения борщевика, а также в интернете по ключевым словам \textquote{фотофиксация растений}, \textquote{поиск и фотофиксация}, а также \textquote{составление пользовательских карт}.
 В качестве аналогов были выбраны сервисы, позволяющие отмечать что-либо на карте, производить поиск растений или же просто собирать и обрабатывать пользовательские данные.
 
-\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
+\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
 	\item \en{iNaturalist} \\
 	\en{iNaturalist}\cite{inaturalist} - сервис для наблюдения за живыми организмами, разработанный Калифорнийской академией наук совместно с \en{National Geographic}.
 	Сервис позволяет глобальному сообществу волонтёров наблюдать за живыми организмами и присылать собранную информацию о них на сайт.
@@ -55,7 +55,7 @@
 \nwln
 Для сравнения аналогов были использованы следующие критерии:
 
-\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
 	\item Полнота данных -- возможность хранения всех необходимых для отчётов данных, а именно: фотографию и краткое описание растения и места его произрастания, географические координаты, дату и время обнаружения, данные о пользователе, который его произвёл, и текущий статус отчёта.
 	\item Обработка данных -- возможность проверки принадлежности растений к отслеживаемым видам, а также работы с данными.
 	\item Мобильный интерфейс -- возможность отправки отчётов в систему как при помощи приложений для операционных систем iOS и \en{Android} так и при помощи web интерфейса, а также существование API для сбора данных.
