--- a/report/plan.tex
+++ b/report/plan.tex
@@ -14,19 +14,22 @@
 	
 	\worktitle
 
-	\vspace*{1cm}
+	\vspace*{0.5cm}
 	
 	\begin{tabularx}{\textwidth}{ l X l }
 		№ п/п & Наименование работ & Срок выполнения \\
-		1 & Обзор литературы по теме работы & \\
-		2 & Наименование раздела & \\
-		3 & Наименование раздела & \\
-		4 & Наименование раздела & \\
-		5 & Оформление пояснительной записки & \\
-		6 & Оформление иллюстративного материала & \\
+		1 & Обзор литературы по теме работы & 20.04 - 22.04 \\
+		2 & Обзор предметной области & 22.04 - 25.04 \\
+		3 & Проектирование интерфейса & 26.04 - 30.04 \\
+		4 & Модель данных и API & 01.05 - 06.05 \\
+		5 & Программная реализация & 06.05 - 20.05 \\
+		6 & Тестирование и исследование & 21.05 - 26.05 \\
+		7 & Оформление пояснительной записки & 26.05 - 29.05 \\
+		8 & Оформление иллюстративного материала & 30.05 - 02.06 \\
+		9 & Предзащита & 03.06
 	\end{tabularx}
 
-	\vspace*{4cm}
+	\vspace*{2cm}
 
 	\subsblock
 \end{center}
