--- a/report/report.tex
+++ b/report/report.tex
@@ -19,7 +19,7 @@
 \usepackage{csquotes}
 
 \usepackage{tikz}
-\usetikzlibrary{positioning}
+\usetikzlibrary{positioning, calc}
 
 % \usepackage{showkeys}
 \usepackage[colorlinks=true, linkcolor=, urlcolor=blue, citecolor=]{hyperref}
