--- a/report/requirements.tex
+++ b/report/requirements.tex
@@ -5,12 +5,12 @@
 \subsection{Постановка задачи}
 
 \tab
-Необходимо разработать систему, позволяющую осуществлять наблюдение за распространением потенциально опасных для человека растений.
+Необходимо разработать систему, позволяющую осуществлять наблюдение за распространением потенциально опасных для человека растений. \\
 
 \subsection{Формулировка требований}
 
 \tab
-Такая система должна соответствовать всем критериям, использованным для сравнения аналогов.
+Такая система должна соответствовать всем критериям, использованным для сравнения аналогов. \\
 
 \subsection{Выбор метода решения}
 
