--- a/report/task.tex
+++ b/report/task.tex
@@ -36,7 +36,7 @@
 	
 	\begin{tabularx}{\textwidth}{ X X }
 		Дата выдачи задания & Дата представления ВКР к защите \\
-		\emptydate & \emptydate
+		\textquote{20} апреля 2022 г. & \textquote{17} июня 2022 г.
 	\end{tabularx}
 
 	\vspace*{1cm}
