--- a/report/tests.tex
+++ b/report/tests.tex
@@ -1,3 +1,7 @@
 % !TeX spellcheck = russian-aot
 
-\section{Исследование решения} 
+\section{Исследование решения}
+
+\subsection{Исследование API серверной части ПО}
+
+\subsection{Исследование системы автоматической проверки изображений}
