--- a/report/additional.tex
+++ b/report/additional.tex
@@ -24,7 +24,7 @@
 \nwln
 Для собственников земельных участков предусмотрена обязанность проведения профилактических мероприятий во избежание произрастания борщевика Сосновского и других сорняков\cite{rural-measures}.
 В качестве профилактических мер Россельхознадзором\cite{countryside-measures} предложены следующие:
-\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
+\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
 	\item Выкапывание растения и его корней до глубины в 20 сми сжигание их, подходит для борьбы с единичными всходами.
 	\item Механическая вспашка при помощи специальной техники с одновременным вспахиванием и подрезанием корней, подходит для борьбы с большими популяциями.
 	\item Сжигание заросли борщевика целиком после обработки горючей жидкостью, подходит для применения в местах без повышенной опасности распространения огня.
@@ -35,7 +35,7 @@
 
 \nwln
 Несоблюдение изложенных выше мер влечёт наложение административного штрафа\cite{rural-fine} в размере:
-\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
+\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
 	\item От двадцати до пятидесяти тысяч рублей для граждан;
 	\item От пятидесяти до ста тысяч рублей для административных лиц;
 	\item От четырёхсот до семисот тысяч рублей для юридических лиц.
@@ -49,7 +49,7 @@
 
 \nwln
 Благодаря возможности описанного в данной работе программного обеспечения предоставлять возможность отслеживания распространения потенциально опасных растений, а также каталогизации и хранения полученной информации, оно может быть использовано как на уровне города, области или региона профессиональными экологами или представителями государственных органов, так и в рамках программы сохранения биологического разнообразия на отдельном предприятии.
-Для этого серверная часть ПО снабжена упрощённой системой установки (см. п. ???), позволяющей развернуть её при помощи нескольких консольных команд и снижающей список ее зависимостей до \en{bash}, \en{Docker} и \en{docker-compose}, а клиентская часть поддерживает сборку для различных платформ, устройств и серверов.
+Для этого серверная часть ПО снабжена упрощённой системой установки (см. п. 3.8), позволяющей развернуть её при помощи нескольких консольных команд и снижающей список ее зависимостей до \en{bash}, \en{Docker} и \en{docker-compose}, а клиентская часть поддерживает сборку для различных платформ, устройств и серверов.
 
 \nwln
 В рамках работы с предлагаемым ПО на предприятиях возможно уменьшение времени реагирования руководства на сообщения сотрудников о произрастающих на территории сорных растениях и упрощение обработки очагов их произрастания и проведения профилактических мер.
