nginx config fixed

--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -23,7 +23,7 @@
 \textbf{Для достижения данной цели были сформулированы следующие задачи}:
 \begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
 	\item Разработка архитектуры, описание ее компонентов и путей передачи данных.
-	\item Создание сервера для сбора и хранения данных, а также системы анализа и модерирования наблюдений с web-интерфейсом.
+	\item Создание серверного приложения для сбора и хранения данных, а также системы анализа и модерирования наблюдений с web-интерфейсом.
 	\item Создание кроссплатформенного мобильного и web приложения, позволяющего добровольцем заносить наблюдения в систему.
 \end{enumerate}
 
@@ -34,4 +34,5 @@
 \textbf{Предметом данного исследования} является распространение опасных для человека видов растений, контроль их популяции.
 
 \nwln
-\textbf{Практическая ценность данной работы} заключается в возможности контроля над распространением потенциально опасных видов растений (в частности, Борщевика Сосновского) на территории Санкт-Петербурга и Ленинградской области. 
+\textbf{Практическая ценность данной работы} заключается в возможности контроля над распространением потенциально опасных видов растений (в частности, Борщевика Сосновского).
+При необходимости с помощью описанного ПО можно проводить наблюдения за распространением любых видов растений.
